doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_162\bin\javadoc.exe
-sourcepath
G:\bhavik java
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;G:\bhavik java
-d
G:\bhavik java\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
bhavik java
-windowtitle
bhavik java
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
project
G:\bhavik java/Chance_Game_MULTYPLAYER.java
G:\bhavik java/prime2.java
G:\bhavik java/pattern2018.java
G:\bhavik java/bookfair.java
G:\bhavik java/stringMenuDriven.java
G:\bhavik java/pan_name.java
G:\bhavik java/reverseString.java
G:\bhavik java/Print.java
G:\bhavik java/thirdsideAreaTRIANGLE.java
G:\bhavik java/noOFwords.java
G:\bhavik java/goldBACH.java
G:\bhavik java/LinearSearch.java
G:\bhavik java/agecharges.java
G:\bhavik java/prime.java
G:\bhavik java/SaleREven.java
G:\bhavik java/String1.java
G:\bhavik java/SeriesOVL.java
G:\bhavik java/YourNumberMyWord.java
G:\bhavik java/decrementprefixOperator.java
G:\bhavik java/Master_Program.java
G:\bhavik java/digitName.java
G:\bhavik java/Vowels.java
G:\bhavik java/linear9.java
G:\bhavik java/multiply2no.java
G:\bhavik java/StringPalindrome.java
G:\bhavik java/AreaOfCir.java
G:\bhavik java/ch_asc.java
G:\bhavik java/mulFunction.java
G:\bhavik java/incrementpostfixOperator.java
G:\bhavik java/evenORodd.java
G:\bhavik java/FinalMarks.java
G:\bhavik java/secret.java
G:\bhavik java/Stringsort.java
G:\bhavik java/classFunction.java
G:\bhavik java/StringShift.java
G:\bhavik java/selSORT_dec.java
G:\bhavik java/mixARRAYS.java
G:\bhavik java/StringShift2.java
G:\bhavik java/Example1.java
G:\bhavik java/StringPotential.java
G:\bhavik java/comORaut.java
G:\bhavik java/polygon.java
G:\bhavik java/switchCase2.java
G:\bhavik java/AmsFun.java
G:\bhavik java/perfect.java
G:\bhavik java/replace.java
G:\bhavik java/selectSORT_char.java
G:\bhavik java/employee.java
G:\bhavik java/inputno.java
G:\bhavik java/Q6_2018.java
G:\bhavik java/min_max.java
G:\bhavik java/withoutParamVoid.java
G:\bhavik java/decrementpostfixOperator.java
G:\bhavik java/pronic.java
G:\bhavik java/BinarySearch.java
G:\bhavik java/PairsCons.java
G:\bhavik java/setLength.java
G:\bhavik java/strikeRate.java
G:\bhavik java/lapDek.java
G:\bhavik java/HYexam3b.java
G:\bhavik java/StringSEPARATE.java
G:\bhavik java/switchCase.java
G:\bhavik java/pat3.java
G:\bhavik java/StringFrequency.java
G:\bhavik java/GCD_LCM.java
G:\bhavik java/LongestWord.java
G:\bhavik java/moviemagic.java
G:\bhavik java/incrementprefixOperator.java
G:\bhavik java/eg1.java
G:\bhavik java/ArmstrongNo.java
G:\bhavik java/cal.java
G:\bhavik java/random.java
G:\bhavik java/StringFunctions.java
G:\bhavik java/Q9_2018.java
G:\bhavik java/ISBN.java
G:\bhavik java/StudGrade.java
G:\bhavik java/hseb.java
G:\bhavik java/pat1.java
G:\bhavik java/pat2.java
G:\bhavik java/Fibonacci.java
G:\bhavik java/ascii.java
G:\bhavik java/kelTOcel.java
G:\bhavik java/MinOfTwoNo.java
G:\bhavik java/pattern4.java
G:\bhavik java/HypotenuseAndArea.java
G:\bhavik java/pattern5.java
G:\bhavik java/HYexam5.java
G:\bhavik java/HYexam4.java
G:\bhavik java/pattern1.java
G:\bhavik java/pattern2.java
G:\bhavik java/BubbleSort.java
G:\bhavik java/pattern3.java
G:\bhavik java/compareOVL.java
G:\bhavik java/CpSp.java
G:\bhavik java/withParam.java
G:\bhavik java/Series.java
G:\bhavik java/lcUC08STRING.java
G:\bhavik java/oddEven.java
G:\bhavik java/selSORT_asc.java
G:\bhavik java/numswitching2.java
G:\bhavik java/numswitching1.java
G:\bhavik java/shutdownvirus.java
G:\bhavik java/buzz.java
<---- end of javadoc command ---->
Loading source file G:\bhavik java\Chance_Game_MULTYPLAYER.java...
Loading source file G:\bhavik java\prime2.java...
Loading source file G:\bhavik java\pattern2018.java...
Loading source file G:\bhavik java\bookfair.java...
Loading source file G:\bhavik java\stringMenuDriven.java...
Loading source file G:\bhavik java\pan_name.java...
Loading source file G:\bhavik java\reverseString.java...
Loading source file G:\bhavik java\Print.java...
Loading source file G:\bhavik java\thirdsideAreaTRIANGLE.java...
Loading source file G:\bhavik java\noOFwords.java...
Loading source file G:\bhavik java\goldBACH.java...
Loading source file G:\bhavik java\LinearSearch.java...
Loading source file G:\bhavik java\agecharges.java...
Loading source file G:\bhavik java\prime.java...
Loading source file G:\bhavik java\SaleREven.java...
Loading source file G:\bhavik java\String1.java...
Loading source file G:\bhavik java\SeriesOVL.java...
Loading source file G:\bhavik java\YourNumberMyWord.java...
Loading source file G:\bhavik java\decrementprefixOperator.java...
Loading source file G:\bhavik java\Master_Program.java...
Loading source file G:\bhavik java\digitName.java...
Loading source file G:\bhavik java\Vowels.java...
Loading source file G:\bhavik java\linear9.java...
Loading source file G:\bhavik java\multiply2no.java...
Loading source file G:\bhavik java\StringPalindrome.java...
Loading source file G:\bhavik java\AreaOfCir.java...
Loading source file G:\bhavik java\ch_asc.java...
Loading source file G:\bhavik java\mulFunction.java...
Loading source file G:\bhavik java\incrementpostfixOperator.java...
Loading source file G:\bhavik java\evenORodd.java...
Loading source file G:\bhavik java\FinalMarks.java...
Loading source file G:\bhavik java\secret.java...
Loading source file G:\bhavik java\Stringsort.java...
Loading source file G:\bhavik java\classFunction.java...
G:\bhavik java\classFunction.java:26: error: reached end of file while parsing
    }
     ^
Loading source file G:\bhavik java\StringShift.java...
Loading source file G:\bhavik java\selSORT_dec.java...
Loading source file G:\bhavik java\mixARRAYS.java...
Loading source file G:\bhavik java\StringShift2.java...
Loading source file G:\bhavik java\Example1.java...
Loading source file G:\bhavik java\StringPotential.java...
Loading source file G:\bhavik java\comORaut.java...
Loading source file G:\bhavik java\polygon.java...
Loading source file G:\bhavik java\switchCase2.java...
Loading source file G:\bhavik java\AmsFun.java...
Loading source file G:\bhavik java\perfect.java...
Loading source file G:\bhavik java\replace.java...
Loading source file G:\bhavik java\selectSORT_char.java...
Loading source file G:\bhavik java\employee.java...
Loading source file G:\bhavik java\inputno.java...
Loading source file G:\bhavik java\Q6_2018.java...
Loading source file G:\bhavik java\min_max.java...
Loading source file G:\bhavik java\withoutParamVoid.java...
Loading source file G:\bhavik java\decrementpostfixOperator.java...
Loading source file G:\bhavik java\pronic.java...
Loading source file G:\bhavik java\BinarySearch.java...
Loading source file G:\bhavik java\PairsCons.java...
Loading source file G:\bhavik java\setLength.java...
Loading source file G:\bhavik java\strikeRate.java...
Loading source file G:\bhavik java\lapDek.java...
Loading source file G:\bhavik java\HYexam3b.java...
Loading source file G:\bhavik java\StringSEPARATE.java...
Loading source file G:\bhavik java\switchCase.java...
Loading source file G:\bhavik java\pat3.java...
Loading source file G:\bhavik java\StringFrequency.java...
Loading source file G:\bhavik java\GCD_LCM.java...
Loading source file G:\bhavik java\LongestWord.java...
Loading source file G:\bhavik java\moviemagic.java...
Loading source file G:\bhavik java\incrementprefixOperator.java...
Loading source file G:\bhavik java\eg1.java...
Loading source file G:\bhavik java\ArmstrongNo.java...
Loading source file G:\bhavik java\cal.java...
Loading source file G:\bhavik java\random.java...
Loading source file G:\bhavik java\StringFunctions.java...
Loading source file G:\bhavik java\Q9_2018.java...
Loading source file G:\bhavik java\ISBN.java...
Loading source file G:\bhavik java\StudGrade.java...
Loading source file G:\bhavik java\hseb.java...
Loading source file G:\bhavik java\pat1.java...
Loading source file G:\bhavik java\pat2.java...
Loading source file G:\bhavik java\Fibonacci.java...
Loading source file G:\bhavik java\ascii.java...
Loading source file G:\bhavik java\kelTOcel.java...
Loading source file G:\bhavik java\MinOfTwoNo.java...
Loading source file G:\bhavik java\pattern4.java...
Loading source file G:\bhavik java\HypotenuseAndArea.java...
Loading source file G:\bhavik java\pattern5.java...
Loading source file G:\bhavik java\HYexam5.java...
Loading source file G:\bhavik java\HYexam4.java...
Loading source file G:\bhavik java\pattern1.java...
Loading source file G:\bhavik java\pattern2.java...
Loading source file G:\bhavik java\BubbleSort.java...
Loading source file G:\bhavik java\pattern3.java...
Loading source file G:\bhavik java\compareOVL.java...
Loading source file G:\bhavik java\CpSp.java...
Loading source file G:\bhavik java\withParam.java...
Loading source file G:\bhavik java\Series.java...
Loading source file G:\bhavik java\lcUC08STRING.java...
Loading source file G:\bhavik java\oddEven.java...
Loading source file G:\bhavik java\selSORT_asc.java...
Loading source file G:\bhavik java\numswitching2.java...
Loading source file G:\bhavik java\numswitching1.java...
Loading source file G:\bhavik java\shutdownvirus.java...
Loading source file G:\bhavik java\buzz.java...
Loading source files for package project...
1 error
